--- a/AffinityPatcher/AffinityPatcher.csproj
+++ b/AffinityPatcher/AffinityPatcher.csproj
@@ -11,12 +11,15 @@
         <SelfContained>true</SelfContained>
         <PublishSingleFile>true</PublishSingleFile>
         <PublishTrimmed>true</PublishTrimmed>
+        <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
+        <Deterministic>true</Deterministic>
+        <Version>1.1.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="dnlib" Version="4.4.0" />
-      <PackageReference Include="Humanizer.Core" Version="3.0.0-beta.13" />
-      <PackageReference Include="Spectre.Console" Version="0.49.1-preview.0.2" />
+      <PackageReference Include="dnlib" Version="4.5.0" />
+      <PackageReference Include="Humanizer.Core" Version="3.0.0-beta.96" />
+      <PackageReference Include="Spectre.Console" Version="0.50.0" />
       <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     </ItemGroup>
 
